fix z-index bug in toggle Icons

--- a/src/scss/main/main.scss
+++ b/src/scss/main/main.scss
@@ -359,6 +359,7 @@ $controlbarHeight: 200px;
         right: spacing(1);
         left: spacing(1);
         bottom: spacing(1);
+        z-index: 2;
       }
 
       .page-setting {
